<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="20dp"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingLeft="20dp"
    tools:context=".activity.MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_lengkap"
                android:layout_marginTop="20dp"
                android:textColor="@color/accent"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_task"
                android:textStyle="bold"
                android:textColor="@color/accent"
                android:textSize="28sp" />
        </LinearLayout>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="right|center"
            android:background="@drawable/ic_calendar"
            android:id="@+id/calendar"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ListView
                android:id="@+id/itemsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:divider="@null"
                android:dividerHeight="0dp"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"/>
        </FrameLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@color/accent"
            android:layout_gravity="right"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_add"
            android:contentDescription="@string/todo">
        </com.google.android.material.floatingactionbutton.FloatingActionButton>

    </LinearLayout>

</LinearLayout>